v1.12.8 - Proper code